tweak page top spacing, fix background image

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ h1 img {
 }
 
 #introduction {
-  margin: 40px 120px 40px 120px;
+  margin: 40px 120px 0 120px;
   text-align: center;
   background: white;
   padding: 15px;
